--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -1,3 +1,18 @@
 <div class="section">
-    
+  <div class="section-items">
+    <div class="labels">
+      <div class="label">
+        <label for="price">Price:</label>
+        <input class="input" type="text" id="price" name="price" />
+      </div>
+      <div class="label">
+        <label for="percentage">Percentage</label>
+        <input class="input" type="text" id="percentage" name="percentage" />
+      </div>
+    </div>
+    <div class="buttons">
+      <button class="btnCalculate" (click)="calculateTip()">Calculate</button>
+      <button class="btnClear">Clear</button>
+    </div>
+  </div>
 </div>
