--- a/src/styles.css
+++ b/src/styles.css
@@ -18,3 +18,14 @@ h2,
 h3 {
   font-family: "Staatliches", sans-serif;
 }
+
+.section {
+  background-color: #4c6a4d;
+  padding: 1rem;
+  margin: 1rem 0;
+  border-radius: 10px;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+}
